加入highlight，修改文件名称为英文

--- a/_posts/2014-10-25-Git-1.md
+++ b/_posts/2014-10-25-Git-1.md
@@ -17,41 +17,55 @@ author: Beehoo
 
 OK下面该来点实际的了。这里的操作都以Windows为环境。打开那个Git Bash，先需要进行一些配置。输入两条命令：
 
-	$ git config --global user.name "你的名字"
-	$ git config --global user.email "你的email"
+{% highlight bash %}
+$ git config --global user.name "你的名字"
+$ git config --global user.email "你的email"
+{% endhighlight %}
 
 因为Git毕竟是一个“分布式版本控制系统”，登记一下个人信息也方便别人知道你是谁是吧。
 
 然后，假设我要在F盘下建立一个名为“test”的文件夹并进入这个文件夹，那么输入命令：
 
-	$ cd f:
-	$ mkdir test
-	$ cd test
+{% highlight bash %}
+$ cd f:
+$ mkdir test
+$ cd test
+{% endhighlight %}
 
 没什么错误信息的话你应该已经在test这个文件夹里了。接着我们再执行一条命令把这个文件夹变成Git仓库：
 
-	$ git init
+{% highlight bash %}
+$ git init
+{% endhighlight %}
 
 请大力敲击你的回车！（反正又不是我的敲坏了不心疼）你已经成功初始化了一个Git仓库！这时候我们进入刚才建立的test文件夹看看，是不是多了一个.git的目录？什么你说没有？“工具-文件夹选项-查看”把显示隐藏文件的选中，然后点击应用再看看。如果还没有，身后那堵墙请自便。关于.git这个目录，你可以暂时不管它是做什么的，只要记住别手贱乱改里面东西就成。
 
 好，我们假设你到目前为止都很顺利的成功了，那么恭喜你还是很有天分的！继续吧~我们在test这个目录里创建一个文本文件（随便是什么反正你之后肯定会把它删了的），比如test.txt。然后里面随便写些什么，比如：Beehoo是个好青年！嗯，快保存我们继续。这一切都ok了，我们继续回到Git Bash里面敲命令：
 
-	$ git add test.txt
+{% highlight bash %}
+$ git add test.txt
+{% endhighlight %}
 
 如果没有出现任何错误提示信息，那么恭喜你成功的把test.txt这个文件添加到了仓库中。如果你改了多个文件该咋办呢？这样吧：
 
-	$ git add .
+{% highlight bash %}
+$ git add .
+{% endhighlight %}
 
 一个点就代表当前目录，这样当前目录下的所有修改过的或新创建的文件就都被添加到仓库里了。我一般都是这么干的，方便。添加到仓库并不代表就完了，它只是把文件放到了暂存区。之后要提交，也就是把暂存区里的内容提交到当前分支。暂时不清楚神马暂存区咯分支咯也没关系，先有个印象就行。
 
-	$ git commit -m "为人为己拜托你就在这儿说点儿啥吧"
+{% highlight bash %}
+$ git commit -m "为人为己拜托你就在这儿说点儿啥吧"
+{% endhighlight %}
 
 加上-m参数然后留下一些说明信息，比如你修改了什么。看到一些温和的提示信息之后恭喜你提交成功了。
 
 好，到这里我们先总结一下。首先，我们初始化了一个Git仓库。之后，这个仓库里今后所有新增、修改的文件先添加后提交。
 
-	$ git init
-	$ git add xxx
-	$ git commit -m "xxx"
+{% highlight bash %}
+$ git init
+$ git add xxx
+$ git commit -m "xxx"
+{% endhighlight %}
 
 下一篇，我们把提交了的这个文件上传到GitHub上。请没有GitHub账号的赶紧先去注册一个。本篇至此，感谢阅读。
